# auto-draw

./: Cargo.toml  LICENSE  README.md  justfile
i18n/: en-US.yaml  zh-CN.yaml
src/: font.rs  main.rs  ui.rs
