[package]
name = "auto-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
crossbeam = "0.8.4"
eframe = "0.29"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
enigo = "0.2.1"
image = "0.25"
imageproc = "0.25"
nanoid = "0.4.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
rfd = "0.15"
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }
