[package]
name = "auto-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
eframe = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
enigo = "0.2"
image = "0.25"
imageproc = "0.25"
nanoid = "0.4"
parking_lot = "0.12"
rayon = "1"
rfd = "0.15"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
